vlib/v/checker/tests/error_with_several_comments_with_crlf_ending.vv
// Comment line 1
// Comment line 2
fn func1() {
	println('Inside func 1')
}

fn main() {
	func1()
	a = 2
	println('a is $a')
}
